--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ion-media-cache",
-  "version": "0.0.14",
+  "version": "0.0.17",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Leo1305Pineda/ion-madia-cache.git"
+    "url": "https://github.com/Leo1305Pineda/ion-media-cache.git"
   },
   "author": {
     "name": "Leonardo Pineda",
@@ -11,12 +11,11 @@
   },
   "keywords": [
     "ionic",
-    "file",
     "media",
     "cache",
     "image",
     "file",
-    "PWA",
+    "cordova-plugin-file",
     "filesystem",
     "fs-web"
   ],
