--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "name": "Leonardo Pineda",
     "email": "leo1305pineda@gmail.com"
   },
+  "license": "MIT",
   "keywords": [
     "ionic",
     "media",
