--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ion-media-cache",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/Leo1305Pineda/ion-media-cache.git"
@@ -28,18 +28,16 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start": "ionic build --prod --build-optimizer --vendor-chunk=true && node server.js",
-    "copy:readme": "cp README.md ./dist/ion-media-cache/README.md",
-    "copy:license": "cp LICENSE ./dist/ion-media-cache/LICENSE",
     "build:lib": "ng build ion-media-cache --prod",
     "publish:lib": "npm run build:lib && cd dist/ion-media-cache && npm publish"
   },
   "private": false,
   "peerDependencies": {
-    "@angular/common": "^10.0.14",
-    "@angular/core": "^10.0.14"
+    "@angular/common": "^11.2.1",
+    "@angular/core": "^11.2.1"
   },
   "dependencies": {
-    "tslib": "^2.0.0",
-    "fs-web": "^1.0.1"
+    "fs-web": "^1.0.1",
+    "tslib": "^2.1.0"
   }
 }
