--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "@angular/core": "^11.2.1"
   },
   "dependencies": {
+    "@ionic-native/file": "^5.36.0",
+    "@ionic-native/ionic-webview": "^5.36.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-ionic-webview": "^5.0.0",
     "fs-web": "^1.0.1",
     "tslib": "^2.1.0"
   }
